<resources>
    <string name="app_name">Calculator</string>
    <string name="calculator">CALCULATOR</string>
    <string name="simple">SIMPLE</string>
    <string name="advanced">ADVANCED</string>
    <string name="about">ABOUT</string>
    <string name="exit">EXIT</string>
    <string name="textview">testvalues</string>
    <string name="buttonContact">CONTACT ME</string>
    <string name="display">123</string>
    <string name="ac">AC</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="slash">/</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="sign">+-</string>
    <string name="bcksp"><![CDATA[<-]]></string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mul">*</string>
    <string name="c">C</string>
    <string name="log">log</string>
    <string name="tan">tan</string>
    <string name="cos">cos</string>
    <string name="x_2">x^2</string>
    <string name="x_y">x^y</string>
    <string name="ln">ln</string>
    <string name="sqrt">sqrt</string>
    <string name="sin">sin</string>
</resources>