<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Logo"
        android:layout_width="321dp"
        android:layout_height="57dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="43dp"
        android:fontFamily="monospace"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/calculator"
        android:textColor="#3A3E6C"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonSimple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSimple"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="321dp"
        android:layout_height="57dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="20dp"
        android:background="#E18888"
        android:backgroundTint="#3F51B5"
        android:text="@string/simple"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdvanced"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo" />

    <Button
        android:id="@+id/buttonAbout"
        android:layout_width="321dp"
        android:layout_height="57dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/about"
        app:layout_constraintBottom_toTopOf="@+id/buttonExit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdvanced" />

    <Button
        android:id="@+id/buttonAdvanced"
        android:layout_width="321dp"
        android:layout_height="57dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/advanced"
        app:layout_constraintBottom_toTopOf="@+id/buttonAbout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSimple" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="321dp"
        android:layout_height="57dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="241dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAbout" />
</androidx.constraintlayout.widget.ConstraintLayout>